@@ -23,6 +23,10 @@ EXTRA_DIST = \
 	fpu_control_word.vgtest \
 	fpu_load_store.stdout.exp-BE fpu_load_store.stdout.exp-LE \
 	fpu_load_store.stderr.exp fpu_load_store.vgtest \
+	load_indexed_instructions.stdout.exp-BE \
+	load_indexed_instructions.stdout.exp-LE \
+	load_indexed_instructions.stdout.exp-non-octeon \
+	load_indexed_instructions.stderr.exp load_indexed_instructions.vgtest \
 	load_store.stdout.exp-BE load_store.stdout.exp-LE load_store.stderr.exp \
 	load_store.vgtest \
 	load_store_multiple.stdout.exp-BE load_store_multiple.stdout.exp-LE \
@@ -40,14 +44,14 @@ EXTRA_DIST = \
 	shift_instructions.stderr.exp shift_instructions.vgtest \
 	test_block_size.stdout.exp test_block_size.stderr.exp \
 	test_block_size.vgtest \
+	test_fcsr.stdout.exp test_fcsr.stderr.exp \
+	test_fcsr.vgtest \
+	test_math.stdout.exp test_math.stderr.exp test_math.vgtest \
 	unaligned_load.stdout.exp-BE unaligned_load.stdout.exp-LE \
 	unaligned_load.stderr.exp unaligned_load.vgtest \
 	unaligned_load_store.stdout.exp-LE unaligned_load_store.stdout.exp-BE \
 	unaligned_load_store.stderr.exp unaligned_load_store.vgtest \
-	test_fcsr.stdout.exp test_fcsr.stderr.exp \
-	test_fcsr.vgtest \
-	const.h macro_fpu.h macro_int.h macro_load_store.h rounding_mode.h \
-	test_math.stdout.exp test_math.stderr.exp test_math.vgtest
+	const.h macro_fpu.h macro_int.h macro_load_store.h rounding_mode.h
 
 check_PROGRAMS = \
 	allexec \
@@ -61,6 +65,7 @@ check_PROGRAMS = \
 	fpu_branches \
 	fpu_control_word \
 	fpu_load_store \
+	load_indexed_instructions \
 	load_store \
 	load_store_multiple \
 	load_store_unaligned \
@@ -70,10 +75,10 @@ check_PROGRAMS = \
 	round \
 	shift_instructions \
 	test_block_size \
-	unaligned_load \
-	unaligned_load_store \
 	test_fcsr \
-	test_math
+	test_math \
+	unaligned_load \
+	unaligned_load_store
 
 AM_CFLAGS    += @FLAG_M64@
 AM_CXXFLAGS  += @FLAG_M64@
@@ -83,6 +88,7 @@ allexec_CFLAGS          = $(AM_CFLAGS) @FLAG_W_NO_NONNULL@
 
 cvm_ins_CFLAGS = $(AM_CFLAGS) -g -O0 @FLAG_OCTEON@
 cvm_lx_ins_CFLAGS = $(AM_CFLAGS) -g -O0 @FLAG_OCTEON2@
+load_indexed_instructions_CFLAGS = $(AM_CFLAGS) -g -O0 @FLAG_OCTEON2@
 fpu_arithmetic_CFLAGS = $(AM_CFLAGS) -lm
 
 # C++ tests
